[package]
name = "checksum"
version = "1.0.0"
edition = "2021"
rust-version = "1.59"
authors = ["LJason <ljason@ljason.cn>"]
readme = "README.md"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dependencies]
hex = "0.4"
sha2 = "0.10"
num_cpus = "1"

[dependencies.clap]
version = "3"
default-features = false
features = ["std", "color", "derive", "cargo"]

[dependencies.rusqlite]
version = "0.27"
